WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283352
[GTK] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key)
https://bugs.webkit.org/show_bug.cgi?id=283352
Summary
[GTK] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key)
zsun
Reported
2024-11-19 02:02:47 PST
STDERR: ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) STDERR: /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/HashTable.h(646) : void WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits, shouldValidateKey>::checkKey(const T&) [with HashTranslator = WTF::IdentityHashTranslator<WTF::HashTraits<long unsigned int>, WTF::DefaultHash<long unsigned int> >; T = long unsigned int; Key = long unsigned int; Value = long unsigned int; Extractor = WTF::IdentityExtractor; HashFunctions = WTF::DefaultHash<long unsigned int>; Traits = WTF::HashTraits<long unsigned int>; KeyTraits = WTF::HashTraits<long unsigned int>; WTF::ShouldValidateKey shouldValidateKey = WTF::ShouldValidateKey::No] STDERR: 1 0x7f458672df56 void WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>::checkKey<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long>, WTF::DefaultHash<unsigned long> >, unsigned long>(unsigned long const&) STDERR: 2 0x7f45867297d2 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>, unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long> > > WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>::add<WTF::IdentityHashTranslator<WTF::HashTraits<unsigned long>, WTF::DefaultHash<unsigned long> >, unsigned long const&, WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>::add(unsigned long const&)::{lambda()#1}>(unsigned long const&, WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>::add(unsigned long const&)::{lambda()#1} const&) STDERR: 3 0x7f4586724b66 WTF::HashTable<unsigned long, unsigned long, WTF::IdentityExtractor, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTraits<unsigned long>, (WTF::ShouldValidateKey)0>::add(unsigned long const&) STDERR: 4 0x7f458671f732 WTF::HashSet<unsigned long, WTF::DefaultHash<unsigned long>, WTF::HashTraits<unsigned long>, WTF::HashTableTraits>::add(unsigned long const&) STDERR: 5 0x7f4588f36385 WebCore::MediaSourcePrivateGStreamer::registerTrackId(unsigned long) STDERR: 6 0x7f4588f39c26 WebCore::SourceBufferPrivateGStreamer::tryRegisterTrackId(unsigned long) STDERR: 7 0x7f4588f2f889 WebCore::AppendPipeline::tryCreateTrackFromPad(_GstPad*) STDERR: 8 0x7f4588f2d06a WebCore::AppendPipeline::didReceiveInitializationSegment() STDERR: 9 0x7f4588f2a55d operator() STDERR: 10 0x7f4588f49d4a call STDERR: 11 0x7f4588ed176b WTF::Function<WebCore::AbortableTaskQueue::Void ()>::operator()() const STDERR: 12 0x7f4588ec7f55 WebCore::AbortableTaskQueue::enqueueTaskAndWait<WebCore::AbortableTaskQueue::Void>(WTF::Function<WebCore::AbortableTaskQueue::Void ()>&&)::{lambda()#1}::operator()() const STDERR: 13 0x7f4588ef05d6 WTF::Detail::CallableWrapper<WebCore::AbortableTaskQueue::enqueueTaskAndWait<WebCore::AbortableTaskQueue::Void>(WTF::Function<WebCore::AbortableTaskQueue::Void ()>&&)::{lambda()#1}, void>::call() STDERR: 14 0x7f458251f167 WTF::Function<void ()>::operator()() const STDERR: 15 0x7f4588e9c5f9 WebCore::AbortableTaskQueue::Task::dispatch() STDERR: 16 0x7f4588e9c6a2 WebCore::AbortableTaskQueue::postTask(WTF::Function<void ()>&&)::{lambda()#1}::operator()() const STDERR: 17 0x7f4588ef12e0 WTF::Detail::CallableWrapper<WebCore::AbortableTaskQueue::postTask(WTF::Function<void ()>&&)::{lambda()#1}, void>::call() STDERR: 18 0x7f4573008387 WTF::Function<void ()>::operator()() const STDERR: 19 0x7f4574907191 WTF::RunLoop::performWork() STDERR: 20 0x7f4574a8b0f0 operator() STDERR: 21 0x7f4574a8b114 _FUN STDERR: 22 0x7f4574a8b04b operator() STDERR: 23 0x7f4574a8b099 _FUN STDERR: 24 0x7f456fb17d36 g_main_context_dispatch STDERR: 25 0x7f456fb752b8 g_main_context_iterate.isra.0 STDERR: 26 0x7f456fb173ff g_main_loop_run STDERR: 27 0x7f4574a8b774 WTF::RunLoop::run() STDERR: 28 0x7f458406ea4d WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) STDERR: 29 0x7f458406e8a3 int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) STDERR: 30 0x7f458406e857 WebKit::WebProcessMain(int, char**) STDERR: 31 0x55dd8594e979 main STDERR: WebKitWebProcess terminated (pid 934621) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
zsun
Comment 1
2024-11-19 02:03:58 PST
Affected tests - imported/w3c/web-platform-tests/media-source/mediasource-changetype-play.html imported/w3c/web-platform-tests/media-source/mediasource-changetype-play-without-codecs-parameter.html
Vivienne Watermeier
Comment 2
2024-11-19 02:34:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36843
EWS
Comment 3
2024-11-19 03:46:44 PST
Committed
286794@main
(6ecba7116c9c): <
https://commits.webkit.org/286794@main
> Reviewed commits have been landed. Closing PR #36843 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug