[GTK] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) https://bugs.webkit.org/show_bug.cgi?id=283352

Reviewed by Philippe Normand.

By default, HashSet disallows 0 as key, see:
https://github.com/WebKit/WebKit/blob/3261dcc32730cb8765e216fa45401618366a5fd2/Source/WTF/wtf/HashTraits.h#L107
Instead, use WTF::UnsignedWithZeroKeyHashTraits.

* Source/WebCore/platform/graphics/gstreamer/mse/MediaSourcePrivateGStreamer.h:

Canonical link: https://commits.webkit.org/286794@main